# scratch

basic_vcp/: PARAMETER_TUNER_README.md  README.md  config.py  config_backup_20250713_000728.py  config_updater.py  ideal_vcp_chart.py  main.py  populate_database.py  requirements.txt  run_parameter_tuner.py  setup.py  test_parameter_tuner.py  vcp_parameters_20250712_235510.json  vcp_parameters_20250713_000637.json  vcp_scan_results_20250712_225332.json  vcp_scan_results_20250712_225956.json  vcp_scan_results_20250713_001211.json  vcp_scan_results_20250713_001522.json
cpp/: HSAI_2y_1d.csv  PLTR_2y_1d.csv  TSLA_10y_1d.csv  TSLA_max_1d.csv  TSLA_vcp_param_log.csv  monte.py  monte_carlo.cc  plot_growth.py
models_xgb_classification_regression/: AAPL_2010_2024.csv  deep lstm.py.txt  model.py.txt  modelXGB_2
performance_based_indicators/: CMakeLists.txt  README.md  build.sh  quick_build.bat
performance_based_indicators/include/: common.h
performance_based_indicators/src/: main.cpp
performance_based_indicators/src/backtester/: backtester.cpp  backtester.h
performance_based_indicators/src/data/: SPY_2020-01-22_2023-06-30.csv  data_loader.cpp  data_loader.h
performance_based_indicators/src/indicators/: indicators_gpu.cu  indicators_gpu.h
performance_based_indicators/src/strategy/: strategy.cpp  strategy.h
performance_based_indicators/src/utils/: utils.cpp  utils.h
performance_based_indicators/src/visualization/: plotter.cpp  plotter.h
stock_indicators/: ML_Analysis_Summary.md  ML_Model_Improvements_Summary.md  README.md  analysis_log.txt  compare_ml_models.py  (+29 more)
(+37 files in other folders)
